@@ -3,7 +3,7 @@ dnl	This file is an input file used by the GNU "autoconf" program to
 dnl	generate the file "configure", which is run during Tcl installation
 dnl	to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.192 2008/12/11 14:42:44 dkf Exp $
+# RCS: @(#) $Id: configure.in,v 1.193 2008/12/12 16:18:09 dkf Exp $
 
 AC_INIT([tcl],[8.6])
 AC_PREREQ(2.59)
@@ -118,12 +118,17 @@ SC_ENABLE_SHARED
 #------------------------------------------------------------------------
 
 zlib_ok=yes
-AC_CHECK_HEADER([zlib.h],[],[
+AC_CHECK_HEADER([zlib.h],[
+  AC_CHECK_TYPE([gz_header],[],[
     zlib_ok=no
-    echo TODO: Add -I$srcdir/compat/zlib/include to compile lines...
-])
-AC_SEARCH_LIBS([adler32],[z],[],[
+    AC_DIAGNOSE([],[TODO: Add -I$srcdir/compat/zlib/include to compile lines])
+  ],[#include <zlib.h>])],[
     zlib_ok=no
+    AC_DIAGNOSE([],[TODO: Add -I$srcdir/compat/zlib/include to compile lines])
+  ])
+AC_SEARCH_LIBS([deflateSetHeader],[z],[],[
+    zlib_ok=no
+    AC_DIAGNOSE([],[TODO: Add $srcdir/compat/zlib to list of things to build])
 ])
 if test $zlib_ok = yes; then
     AC_DEFINE(HAVE_ZLIB, 1, [Is there an installed zlib?])
